# voicevox-playground-tui

./: AGENTS.md  Cargo.toml  README.ja.md  README.md  _config.yml  build.rs  for_local.bat
issue-notes/: 100.md  104.md  106.md  109.md  11.md  111.md  113.md  115.md  117.md  119.md  121.md  125.md  129.md  13.md  131.md  133.md  135.md  136.md  138.md  139.md  14.md  141.md  142.md  144.md  146.md  150.md  152.md  154.md  155.md  159.md  16.md  160.md  162.md  17.md  18.md  20.md  24.md  25.md  26.md  28.md  (+36 more)
scripts/: fix_diff_line_endings.py
src/: app.rs  background_prefetch.rs  clipboard.rs  config.rs  engine_launcher.rs  fetch.rs  history.rs  main.rs  mascot_render.rs  player.rs  runtime_notice.rs  speakers.rs  startup.rs  tag.rs  tui.rs  ui.rs  updater.rs  voicevox.rs
src/app/: help.rs  insert_mode.rs  intonation_mode.rs  mod.rs  normal_mode.rs  playback.rs  speaker_style_mode.rs  tab_ops.rs  utils.rs
src/mascot_render/: cache.rs  logging.rs  mod.rs  overlay.rs  test_support.rs
src/tests/: background_prefetch.rs  config.rs  history.rs  main.rs  mascot_render.rs  tag.rs  tui.rs  updater.rs  voicevox.rs
src/tests/app/: help.rs  insert_mode.rs  normal_mode.rs  playback.rs  speaker_style_mode.rs  tab_ops.rs  utils.rs
src/tui/: mode_handlers.rs
src/ui/: help.rs  intonation.rs  lines.rs  mod.rs  overlay.rs  speaker_style.rs
