[package]
name    = "voicevox-playground-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpt"
path = "src/main.rs"

[dependencies]
ratatui     = "0.29"
crossterm   = "0.28"
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rodio       = "0.19"
tokio       = { version = "1", features = ["full"] }
dirs        = "5"
anyhow      = "1"
cat-self-update-lib = { git = "https://github.com/cat2151/cat-self-update", branch = "main" }
tui-textarea = "0.7"
arboard      = { version = "3.6.1", default-features = false }
unicode-width = "0.2"
toml = "0.8"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
mascot-render-client = { git = "https://github.com/cat2151/mascot-render-server", branch = "main", package = "mascot-render-client" }
mascot-render-protocol = { git = "https://github.com/cat2151/mascot-render-server", branch = "main", package = "mascot-render-protocol" }
